--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team Cherry Holiday Sign Off</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -34,7 +34,8 @@
             <div class="text-container">
                 <h1>Team Cherry Holiday Sign Off</h1>
                 <p>Happy Holidays Gang!</p>
-                <p>With Christmas close and Team Cherry about to take a few days off after an intensive year’s development, we’re gonna try and keep this update as snap-sharp as we can.</p>
+                <p>With Christmas close and Team Cherry about to take a few days off after an intensive year’s development,
+                    we’re gonna try and keep this update as snap-sharp as we can.</p>
                 <p>12/13/19</p>
                 <a href="#" class="read-more">Read More</a>
             </div>
