--- a/index.html
+++ b/index.html
@@ -1,45 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team Cherry Holiday Sign Off</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <header>
-        <div class="logo">
-            <img src="logo.png" alt="Logo">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Games</a></li>
-                <li><a href="#">Merchandise</a></li>
-                <li><a href="#">About</a></li>
-            </ul>
-        </nav>
-        <div class="social-icons">
-            <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
-            <a href="#"><img src="youtube-icon.png" alt="YouTube"></a>
-            <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
-        </div>
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Team Cherry Holiday Sign Off</title>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <header>
+            <div class="logo">
+                <img src="logo.png" alt="Logo">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Games</a></li>
+                    <li><a href="#">Merchandise</a></li>
+                    <li><a href="#">About</a></li>
+                </ul>
+            </nav>
+            <div class="social-icons">
+                <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
+                <a href="#"><img src="youtube-icon.png" alt="YouTube"></a>
+                <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
+            </div>
+        </header>
 
-    <main>
-        <div class="content">
-            <div class="image-container">
-                <img src="image.png" alt="Team Cherry Image">
+        <main>
+            <div class="content">
+                <div class="image-container">
+                    <img src="image.png" alt="Team Cherry Image">
+                </div>
+                <div class="text-container">
+                    <h1>Team Cherry Holiday Sign Off</h1>
+                    <p>Happy Holidays Gang!</p>
+                    <p>With Christmas close and Team Cherry about to take a few days off after an intensive year’s development,
+                        we’re gonna try and keep this update as snap-sharp as we can.</p>
+                    <p>12/13/19</p>
+                    <a href="#" class="read-more">Read More</a>
+                </div>
             </div>
-            <div class="text-container">
-                <h1>Team Cherry Holiday Sign Off</h1>
-                <p>Happy Holidays Gang!</p>
-                <p>With Christmas close and Team Cherry about to take a few days off after an intensive year’s development,
-                    we’re gonna try and keep this update as snap-sharp as we can.</p>
-                <p>12/13/19</p>
-                <a href="#" class="read-more">Read More</a>
+        </main>
+
+        <footer>
+            <div class="footer-content">
+                <div>
+                    <p>Team Cherry is a small indie games team in Adelaide, South Australia.</p>
+                    <p>Our mission is to build crazy and exciting worlds for you to explore and conquer.</p>
+                    <p>Copyright © 2024 Team Cherry</p>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Games</a></li>
+                        <li><a href="#">Merchandise</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </nav>
+                <div class="social-icons">
+                    <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
+                    <a href="#"><img src="youtube-icon.png" alt="YouTube"></a>
+                    <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
+                </div>
             </div>
-        </div>
-    </main>
-</body>
+        </footer>
+    </body>
 </html>
