--- a/index.html
+++ b/index.html
@@ -1,70 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Team Cherry Holiday Sign Off</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <header>
-            <div class="logo">
-                <img src="logo.png" alt="Logo">
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Games</a></li>
-                    <li><a href="#">Merchandise</a></li>
-                    <li><a href="#">About</a></li>
-                </ul>
-            </nav>
-            <div class="social-icons">
-                <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
-                <a href="#"><img src="youtube-icon.png" alt="YouTube"></a>
-                <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Team Cherry</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <div class="wrapper">
+        <!-- Navbar -->
+        <header class="navbar">
+            <img src="icons/Logo.svg" alt="Logo">
+            <ul>
+                <li><a href="index.html">Blog</a></li>
+                <li><a href="games.html">Games</a></li>
+                <li><a href="#">Merchandise</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+            <div>
+                <a href="#"><img src="icons/Twitter.svg" alt="Twitter"></a>
+                <a href="#"><img src="icons/Youtube.svg" alt="Youtube"></a>
+                <a href="#"><img src="icons/Facebook.svg" alt="Facebook"></a>
             </div>
         </header>
 
+        <!-- Main Content -->
         <main>
             <div class="content">
-                <div class="image-container">
-                    <img src="image.png" alt="Team Cherry Image">
+                <img src="icons/Main_image.jpg" alt="Hollow Knight Image">
+                <div>
+                    <h1>TEAM CHERRY HOLIDAY SIGN OFF</h1>
+                    <p>Happy Holidays Gang!<br>With Christmas close and Team Cherry about to take a few days off after an intensive year’s development, we’re gonna try and keep this update as snap-sharp as we can.</p>
+                    <a href="#" class="read-more">Read More</a>
                 </div>
-                <div class="text-container">
-                    <h1>Team Cherry Holiday Sign Off</h1>
-                    <p>Happy Holidays Gang!</p>
-                    <p>With Christmas close and Team Cherry about to take a few days off after an intensive year’s development,
-                        we’re gonna try and keep this update as snap-sharp as we can.</p>
-                    <p>12/13/19</p>
+            </div>
+
+            <div class="content">
+                <div>
+                    <h1>TEAM CHERRY HOLIDAY SIGN OFF</h1>
+                    <p>Happy Holidays Gang!<br>With Christmas close and Team Cherry about to take a few days off after an intensive year’s development, we’re gonna try and keep this update as snap-sharp as we can.</p>
+                    <a href="#" class="read-more">Read More</a>
+                </div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/UAO2urG23S4" 
+                        title="Hollow Knight: Silksong Reveal Trailer" frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen></iframe>
+            </div>
+
+            <div class="content">
+                <img src="icons/Main_image.jpg" alt="Hollow Knight Image">
+                <div>
+                    <h1>TEAM CHERRY HOLIDAY SIGN OFF</h1>
+                    <p>Happy Holidays Gang!<br>With Christmas close and Team Cherry about to take a few days off after an intensive year’s development, we’re gonna try and keep this update as snap-sharp as we can.</p>
                     <a href="#" class="read-more">Read More</a>
                 </div>
             </div>
         </main>
+    </div>
 
-        <footer>
-            <div class="footer-content">
-                <div>
-                    <p>Team Cherry is a small indie games team in Adelaide, South Australia.</p>
-                    <p>Our mission is to build crazy and exciting worlds for you to explore and conquer.</p>
-                    <p>Copyright © 2024 Team Cherry</p>
-                </div>
-                <nav>
-                    <ul>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Games</a></li>
-                        <li><a href="#">Merchandise</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                    </ul>
-                </nav>
-                <div class="social-icons">
-                    <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
-                    <a href="#"><img src="youtube-icon.png" alt="YouTube"></a>
-                    <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
-                </div>
-            </div>
-        </footer>
-    </body>
+    <!-- Footer -->
+    <footer>
+        <p>Team Cherry is a small indie games team in Adelaide, South Australia.</p>
+        <p>Our mission is to build crazy and exciting worlds for you to explore and conquer.</p>
+        <p>Copyright © 2024 Team Cherry</p>
+        <div>
+            <a href="#">Blog</a> | 
+            <a href="#">Games</a> | 
+            <a href="#">Merchandise</a> | 
+            <a href="#">About</a> | 
+            <a href="#">FAQ</a> | 
+            <a href="#">Contact Us</a>
+        </div>
+    </footer>
+</body>
 </html>
